--- a/Style.css
+++ b/Style.css
@@ -3,17 +3,17 @@
   --color-primary: #000;
   --color-secondary: #ffb718;
 }
-*{
+* {
   box-sizing: border-box;
   background-color: var(--color-background);
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
-header{
-  display:flex;
+header {
+  display: flex;
   justify-content: center;
 }
-.nav-bar{
+.nav-bar {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -25,21 +25,46 @@ header{
   position: fixed;
   top: 0;
 }
-.nav-bar ul li{
+.nav-bar ul li {
   list-style: none;
   display: inline-block;
   padding: 0px 1rem;
 }
-.nav-bar a{
+.nav-bar a {
   text-decoration: none;
   color: var(--color-primary);
   font-size: 1.5rem;
   transition: all 0.5s ease 0s;
 }
-.nav-bar a:hover{
+.nav-bar a:hover {
   color: var(--color-secondary);
 }
-.main, .footer{
-  padding: 3rem 20%;
-  
+.main {
+  margin: 0 auto;
+  padding-top: 3rem;
+  max-width: 60%;
+  border-bottom: 4px dashed var(--color-secondary);
 }
+.footer {
+  margin: 0 auto;
+  max-width: 60%;
+}
+.biography {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0px 0px 32px;
+  gap: 51px;
+  border-bottom: 4px dashed var(--color-secondary);
+}
+.biography img {
+  max-width: 222px;
+  max-height: 222px;
+  outline: 8px solid #fffefe;
+  outline-offset: -8px;
+  border-radius: 100%;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.projects {
+}
+/*:TODO HACER 767px responsive*/
