--- a/Style.css
+++ b/Style.css
@@ -1,10 +1,16 @@
 :root {
   --color-background: #f9f7f9;
+  --color-background-box: #eeeeee;
+  --color-background-hover: #cecece;
   --color-primary: #000;
   --color-secondary: #ffb718;
 }
-* {
+*,
+::after,
+::before {
   box-sizing: border-box;
+}
+body {
   background-color: var(--color-background);
   font-family: "Inter", sans-serif;
 }
@@ -34,10 +40,12 @@ header {
   text-decoration: none;
   color: var(--color-primary);
   font-size: 1.5rem;
-  transition: all 0.5s ease 0s;
+  transition: all 0.4s ease 0s;
+  padding: 0.5rem 1rem;
+  border-radius: 1.5rem;
 }
 .nav-bar a:hover {
-  color: var(--color-secondary);
+  background-color: var(--color-background-hover);
 }
 .main {
   margin: 0 auto;
@@ -53,18 +61,44 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-between;
   padding: 0px 0px 32px;
-  gap: 51px;
   border-bottom: 4px dashed var(--color-secondary);
 }
 .biography img {
-  max-width: 222px;
-  max-height: 222px;
+  margin-top: 2rem;
+  max-height: 240px;
   outline: 8px solid #fffefe;
   outline-offset: -8px;
   border-radius: 100%;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-.projects {
+
+.container-projects {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-evenly;
 }
+.box-project {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 40%;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 1rem;
+  background-color: var(--color-background-box);
+  transition: all ease-in-out 0.3s 0s;
+}
+.box-project:hover {
+  background-color: var(--color-background-hover);
+}
+.box-project img,
+.box-project p {
+  object-fit: cover;
+  width: 80%;
+  height: 80%;
+}
+
 /*:TODO HACER 767px responsive*/
